Update 'ikb452v5j-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:07f21300d866d81162211bc5289c61ef301f933f@sha256:568341dc69178c05f1c510020c04c53eb7eb3d89cd857fbabce9f8d33d38a30e

--- a/components/ikb452v5j-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/ikb452v5j-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ikb452v5j-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:07f21300d866d81162211bc5289c61ef301f933f@sha256:568341dc69178c05f1c510020c04c53eb7eb3d89cd857fbabce9f8d33d38a30e
+          name: container-image
